Fix monospace font vertical alignment

--- a/dashboard/src/styles/main.scss
+++ b/dashboard/src/styles/main.scss
@@ -20,3 +20,8 @@ a:not(.btn),
     text-decoration: underline;
   }
 }
+
+.font-monospace {
+  line-height: 1;
+  padding-top: 6px;
+}
